Migrate tests to value types (part 2)